<resources>
    <string name="app_name">PrepPlatePerfect</string>
    <string name="app_logo">PrepPlatePerfectLogo</string>

    <!-- Titles -->
    <string name="title_home">Home</string>
    <string name="title_login">Login</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_cookbook">Cookbook</string>
    <string name="title_discover">Discover</string>
    <string name="title_organiser">Organiser</string>
    <string name="title_your_list">Your List</string>
    <string name="title_shopping">Shopping List</string>
    <string name="title_app_name">PrepPlatePerfect</string>
    <string name="title_your_recipes">Your Recipes</string>
    <string name="title_meal_reminder">Meal Reminder</string>
    <string name="title_meal_information">Meal Information</string>
    <string name="title_explore_recipes">Explore Recipes</string>
    <string name="title_add_ingredients">Add Ingredients to Shopping List</string>

    <!-- Buttons -->
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_add_item">Add Item</string>
    <string name="btn_add_recipe">Add Recipe</string>
    <string name="btn_delete_recipe">Delete Recipe</string>
    <string name="btn_toggle_edit_mode">Toggle Edit Mode</string>
    <string name="btn_add_meal_reminder">Add Meal Reminder</string>
    <string name="btn_add_to_shopping_list">Add to Shopping List</string>

    <!-- Subtitles -->
    <string name="sub_info">Info</string>
    <string name="sub_star_rating">4.5 ★</string>
    <string name="sub_meal_time">Meal Time</string>
    <string name="sub_meal_name">Meal Name</string>
    <string name="sub_item_name">Item Name</string>
    <string name="sub_recipe_name">Recipe Name</string>
    <string name="sub_recipe_time">Cooking Time</string>
    <string name="sub_example_item">Example Item</string>
    <string name="sub_search_hint">Search recipes</string>
    <string name="sub_recipe_description">Description</string>
    <string name="sub_recipe_ingredients">Ingredients</string>
    <string name="sub_tip_of_the_week">Tip of the Week</string>
    <string name="sub_recipe_instructions">Instructions</string>
    <string name="sub_welcome">Welcome to PrepPlatePerfect!</string>
    <string name="sub_recipe_of_the_week">Recipe of the Week</string>
    <string name="sub_welcome_message">Our goal is to help you plan, prepare, and perfect your meals with ease. Enjoy a seamless cooking experience with our app!</string>
    <string name="sub_tip">Always preheat your oven to ensure even cooking.</string>
≈
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>