<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/baseline_people_24"
        android:title="@string/title_discover" />
    <item
        android:id="@+id/navigation_organiser"
        android:icon="@drawable/baseline_calendar_today_24"
        android:title="@string/title_organiser" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_cookbook"
        android:icon="@drawable/baseline_shelves_24"
        android:title="@string/title_cookbook" />
    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/baseline_shopping_basket_24"
        android:title="@string/title_shopping" />

</menu>